<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#A982E7"
        app:title="@string/add_new_task"
        app:titleTextColor="@android:color/white"
        />

    <EditText
        android:id="@+id/newTaskText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"

        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"

        android:hint="@string/new_task"
        android:padding="6dp" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newTaskText"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/save_button"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:background="@color/purple"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newTaskText"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"

        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/purple"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="20dp"/>


</RelativeLayout>